compiler/testData/cli/jvm/syntheticAccessorSignatureClash.out
compiler/testData/cli/jvm/syntheticAccessorSignatureClash.kt:14:1: error: accidental override: The following declarations have the same JVM signature (access$foo(LDerived;)V):
    fun `access$foo`(d: Derived): Unit defined in Derived
    fun `access$foo`(`$this`: Derived): Unit defined in Derived
class Derived : Base() {
^
COMPILATION_ERROR
